fixed transition z-index issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,3 +82,7 @@
     text-align: left;
     width: 12rem;
 }
+
+.transition {
+    z-index: 5;
+}
